bugfix: changed values to pixel, now no more errors due to uneven pixel sizes

--- a/src/components/HoverPoint.scss
+++ b/src/components/HoverPoint.scss
@@ -4,8 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 2rem;
-  height: 2rem;
+  width: 32px;
+  height: 32px;
 
   .circle {
     position: relative;
@@ -21,10 +21,9 @@
 
     &.inner-circle {
       position: absolute;
-      width: 35%;
-      height: 35%;
+      width:  12px;
+      height: 12px;
       border: 3px white solid;
-      transition: 0.2s ease-in-out;
     }
   }
 
